--- a/src/main/webapp/creadorTopico.xhtml
+++ b/src/main/webapp/creadorTopico.xhtml
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>Sapios</title>
     <h:outputStylesheet library="css" name="form.css"/>
@@ -12,7 +13,9 @@
             <h:inputText id="topicName" value="#{topicBuilder.name}" class="input-text"/>
 
             <h:outputLabel for="prompt" value="Prompt" class="text"/>
-            <h:inputText id="prompt" value="#{topicBuilder.prompt}" class="input-text"/>
+            <p:inputTextarea rows="1" id="prompt"
+                             value="#{topicBuilder.prompt}"
+                             styleClass="rounded-textbox"/>
 
             <h:outputLabel for="course" value="Curso" class="text"/>
             <h:selectOneMenu id="course" value="#{topicBuilder.course}" class="dropdown-text">
