ollama pre release

--- a/src/main/webapp/clase.xhtml
+++ b/src/main/webapp/clase.xhtml
@@ -58,8 +58,7 @@
         </h:form>
     </div>
 
-    <!-- Poll for refreshing chat messages -->
-    <p:poll interval="2" update="chatMessages" />
+    <p:poll interval="20" intervalType="millisecond" update="chatMessages" />
 
 </h:body>
 </html>
