allows importing and adding courses

--- a/src/main/webapp/landing.xhtml
+++ b/src/main/webapp/landing.xhtml
@@ -8,10 +8,10 @@
 <h:body>
     <div class="background">
         <h:form class="container">
-            <h:link outcome="aulas" class="text">
+            <h:link outcome="hallway" class="text">
                 Aulas
             </h:link>
-            <h:link outcome="editorial" class="text">
+            <h:link outcome="publisher" class="text">
                 Editorial
             </h:link>
         </h:form>
