--- a/src/main/webapp/publisher.xhtml
+++ b/src/main/webapp/publisher.xhtml
@@ -14,6 +14,9 @@
             <h:link outcome="creadorTopico" class="text">
                 Crear tópico
             </h:link>
+            <h:link outcome="importExport" class="text">
+                Importar/Exportar cursos
+            </h:link>
         </h:form>
     </div>
 </h:body>
