--- a/src/main/webapp/hallway.xhtml
+++ b/src/main/webapp/hallway.xhtml
@@ -24,6 +24,9 @@
             </h:selectOneMenu>
 
             <h:commandButton value="Ir a clase" action="#{hallway.submit}" class="text"/>
+            <h:link outcome="landing" class="text" style="margin-top: 20px;">
+                Volver
+            </h:link>
         </h:form>
     </div>
 </h:body>
