--- a/src/main/webapp/publisher.xhtml
+++ b/src/main/webapp/publisher.xhtml
@@ -8,14 +8,17 @@
 <h:body>
     <div class="background">
         <h:form class="container">
-            <h:link outcome="creadorCurso" class="text">
+            <h:link outcome="courseBuilder" class="text">
                 Crear curso
             </h:link>
-            <h:link outcome="creadorTopico" class="text">
+            <h:link outcome="topicBuilder" class="text">
                 Crear tópico
             </h:link>
             <h:link outcome="importExport" class="text">
                 Importar/Exportar cursos
+            </h:link>
+            <h:link outcome="landing" class="text" style="margin-top: 20px;">
+                Volver
             </h:link>
         </h:form>
     </div>
