--- a/src/main/webapp/topicBuilder.xhtml
+++ b/src/main/webapp/topicBuilder.xhtml
@@ -27,6 +27,9 @@
             <h:inputText id="order" value="#{topicBuilder.order}" class="input-text"/>
 
             <h:commandButton value="Añadir" action="#{topicBuilder.addTopic}" class="text"/>
+            <h:link outcome="publisher" class="text" style="margin-top: 20px;">
+                Volver
+            </h:link>
         </h:form>
     </div>
 </h:body>
